Commit Email service

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -27,13 +27,13 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-6 col-sm-offset-3">
-				<h1>iLink Solutions: Phase Two Demo.</h1>
+				<h1>iLink Solutions: File Upload for Decryption.</h1>
 				<!-- begin repeat for each entry -->
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<h3 class="panel-title">{{ summary }}</h3>
+						<h3 class="panel-title">{{ summary }} </h3>
 					</div>
-					<div class="panel-body">{{ description }}</div>
+					<div class="panel-body">{{ description }} </div>
 				</div>
 				<!-- end repeat for each entry -->
 				<form action="upload" method="post" enctype="multipart/form-data">
